# junction

junction-backend/: Cargo.toml  docker-compose.yml
junction-backend/migrations/: 01_create_sessions.sql  02_create_verifications.sql
junction-backend/src/: config.rs  error.rs  main.rs
junction-backend/src/db/: session.rs  verification.rs
junction-backend/src/handlers/: ai.rs  mod.rs  session.rs  verification.rs  verify_signature.rs
junction-backend/src/middleware/: rate_limit.rs
junction-backend/src/models/: mod.rs  session.rs  verification.rs
junction-mobile/: .gitignore  README.md  flutter_launcher_icons.yaml  pubspec.yaml
junction-mobile/android/: gradle.properties
junction-mobile/android/app/: build.gradle
junction-mobile/ios/Runner/: Info.plist
junction-mobile/ios/Runner.xcodeproj/: project.pbxproj
junction-mobile/lib/: bottom_wide_button.dart  di.dart  fin_animations.dart  fin_colors.dart  fin_text_style.dart  log.dart  main.dart  vibrates.dart
junction-mobile/lib/app/: app.dart  app_cubit.dart  app_cubit_state.dart  app_cubit_state.g.dart
junction-mobile/lib/data/: qr_payload.dart  qr_payload.g.dart  serializers.dart  serializers.g.dart  sign_response.dart  sign_response.g.dart  verify_response.dart  verify_response.g.dart
junction-mobile/lib/pages/: home_page.dart  onboarding_step_1_page.dart  onboarding_step_2_page.dart  onboarding_step_3_page.dart  onboarding_step_4_page.dart  profile_page.dart  qr_page.dart
junction-web/: package-lock.json  package.json
junction-web/app/: config.ts  layout.tsx  page.tsx
(+9 files in other folders)
